Git Deployment Assignment/force-app/main/default/objects/Customer_Information__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Customer&apos;s street address</description>
    <label>Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>