Git Deployment Assignment/force-app/main/default/objects/Customer_Information__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Customer&apos;s city</description>
    <label>City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>