Git Deployment Assignment/force-app/main/default/objects/Customer_Information__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Customer&apos;s first name</description>
    <label>First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>