Git Deployment Assignment/force-app/main/default/objects/Customer_Information__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Customer&apos;s zip code</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>